thinwedge-rs/tui/src/chatwidget/snapshots/thinwedge_tui__chatwidget__tests__preamble_keeps_working_status.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"• Working (0s • esc to interrupt)                                               "
"                                                                                "
"                                                                                "
"› Ask ThinWedge to do anything                                                      "
"                                                                                "
"  gpt-5.5 default · /tmp/project                                                "
