thinwedge-rs/tui/src/chatwidget/snapshots/thinwedge_tui__chatwidget__tests__renamed_thread_footer_title.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"› Ask ThinWedge to do anything                                                      "
"                                                                                "
"  gpt-5.3-thinwedge high · Roadmap cleanup                                          "
