thinwedge-rs/tui/src/chatwidget/snapshots/thinwedge_tui__chatwidget__tests__slash_copy_no_output_info_message.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
assertion_line: 1358
expression: rendered
---
■ No transcript cells to export
