thinwedge-rs/tui/src/chatwidget/snapshots/thinwedge_tui__chatwidget__tests__status_line_fast_mode_footer.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"                                                                                "
"› Ask ThinWedge to do anything                                                      "
"                                                                                "
"  Fast on                                                                       "
